# mmm

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
.viz/: stats.json
conf/: logging.yml
conf/base/: catalog.yml  logging.yml  parameters.yml
docs/source/: conf.py  index.rst
src/: pyproject.toml  requirements.txt
src/mmm/: __init__.py  __main__.py  settings.py
src/mmm/commons/: datasets.py
src/mmm/extras/: datasets.py  plots.py
src/mmm/pipelines/data_engineering/: nodes.py  pipeline.py
src/mmm/pipelines/data_processing/: nodes.py  pipeline.py
src/mmm/pipelines/data_science/: nodes.py  pipeline.py
src/tests/: test_run.py
